# appliedpoetics.org

./: .htaccess  .travis.yml  LICENSE  README.md  ap-file.php  ap-pl.php  ap-py.php  astro.config.mjs  index.php  majorupdate.php  next  package-lock.json  package.json  tsconfig.json  vitest.config.js  wrangler.jsonc
accounts/: ap-notes-load.php  ap-notes-mgmt.php  ap-notes.php  ap-twitter-auth.php  ap-users.php
api/: .htaccess  index.php
css/: style.css
javascript/: form-functions.js  function-json.js  function-ui.js
js/: app-router.js  form-functions.js  function-json.js  function-login.js  function-ui.js  line-limit.js  line-numbers.js  menu-functions.js  text-stats.js  utf8-code.js
julia/: Main.jl  abcquence.jl  abecedarian.jl  absente.jl  alternator.jl  anagram.jl  chainreaction.jl  fibonnaci.jl  hexwords.jl  homoconsonant.jl  isolate.jl  lipogram.jl  presente.jl  prisoners.jl  punctuator.jl  quotes.jl  snowball.jl  tautogram.jl  univocalism.jl
labreports/: contentful.sh  index.php  reports.py
perl/: markov.pl  travesty.pl
php/: Config.php  Controller.php  FileSystem.php  Processor.php
public/: site.webmanifest
python/: Main.py  abecedarian.py  alphabetron.py  alternator.py  alternator.py.save.1  anagram.py  anagram.py.save.1  ap_encoding.py  beaupresente.py  belleabsente.py  birthdate.py  blockchain.py  chainreaction.py  color.py  colorfield.py  concordance.py  countsentences.py  dedupe.py  defaulttext.py  dialer.py  fashion.py  fibonacci.py  hashdict.py  hexwords.py  homoconsonant.py  homophonic.py  lost.py  (+35 more)
rust/: Cargo.toml
rust/src/: lib.rs
(+75 files in other folders)
