[package]
name = "core"
version = "0.1.0"
authors = ["Douglas Luman <admin@appliedpoetics.org>"]
edition = "2018"

[dependencies]
regex = "1"
itertools = "0.8.0"

[[bin]]
name = "tautogram"
path = "src/bin/oulipean/tautogram.rs"
[[bin]]
name = "lipogram"
path = "src/bin/oulipean/lipogram.rs"
[[bin]]
name = "homoconsonant"
path = "src/bin/oulipean/homoconsontant.rs"
[[bin]]
name = "fibonnaci"
path = "src/bin/oulipean/fibonnaci.rs"
[[bin]]
name = "prisoner"
path = "src/bin/oulipean/prisoner.rs"
[[bin]]
name = "belleabsente"
path = "src/bin/oulipean/belleabsente.rs"
[[bin]]
name = "beaupresente"
path = "src/bin/oulipean/beaupresente.rs"
[[bin]]
name = "univocalism"
path = "src/bin/oulipean/univocalism.rs"
